[package]
name = "spaceapi-server"
version = "0.4.1"
documentation = "https://docs.rs/spaceapi-server"
repository = "https://github.com/spaceapi-community/spaceapi-server-rs"
license = "MIT OR Apache-2.0"
authors = [
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
    "Stefan Schindler <stefan@estada.ch>",
]
description = "A library that allows you to easily implement a SpaceAPI server."
readme = "README.md"
keywords = ["spaceapi", "hackerspaces", "status", "api", "server"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "AUTHORS.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2018"

[dependencies]
r2d2 = "^0.8.5"
r2d2_redis = "^0.12.0"
redis = "^0.13.0"
log = "^0.4"
iron = "^0.6.1"
urlencoded = "^0.6"
router = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
spaceapi = "^0.7.0"
quick-error = "1.2"


[dev-dependencies]
env_logger = "^0.7.1"
